k8s/common/default-networkpolicy/CiliumNetworkPolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
spec:
  endpointSelector: {}
  ingress: []
  egress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-dns-egress
spec:
  endpointSelector: {}
  egress:
    - toEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: kube-system, k8s-app: kube-dns}]
      toPorts: [{ports: [{port: '53', protocol: TCP}, {port: '53', protocol: UDP}], rules: {dns: [{matchPattern: '*'}]}}]
